# rs-media

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  azure-pipelines.yml  codecov.yml
.github/: labeler.yml
.github/workflows/: ci.yml  labels.yml  rust-ci.yml  rust.yml
ci/: coverage-report.zsh
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml  README.md
core/src/: errors.rs  lib.rs
core/src/auth/: errors.rs  mod.rs
core/src/events/: errors.rs  handlers.rs  manager.rs  mod.rs  traits.rs  types.rs
core/src/http/: errors.rs  mod.rs
core/src/http/client/: errors.rs  mod.rs
core/src/http/server/: errors.rs  mod.rs
core/src/logging/: errors.rs  mod.rs
core/src/macros/: errors.rs  mod.rs
core/src/metadata/: errors.rs  mod.rs
core/src/sorting/: errors.rs  mod.rs
core/src/tests/: integration_test.rs
core/tests/: events_integration_test.rs  integration_test.rs
docs/: CONTRIBUTING.md  README.md
manager/: Cargo.toml  README.md
manager/src/: errors.rs  main.rs
manager/src/config/: errors.rs  mod.rs
server/: Cargo.toml  README.md
server/src/: main.rs
src/: lib.rs
src/metadata/: ffprobe.rs  mod.rs
zephyrs-client/: Cargo.toml
zephyrs-client/src/: main.rs
zephyrs-core/: Cargo.toml
zephyrs-core/src/: errors.rs  lib.rs
zephyrs-core/src/auth/: errors.rs  mod.rs
zephyrs-core/src/events/: errors.rs  handlers.rs  manager.rs  mod.rs  traits.rs  types.rs
zephyrs-core/src/http/: errors.rs  mod.rs
zephyrs-core/src/http/client/: errors.rs  mod.rs
zephyrs-core/src/http/server/: errors.rs  mod.rs
zephyrs-core/src/logging/: errors.rs  mod.rs
zephyrs-core/src/macros/: errors.rs  mod.rs
zephyrs-core/src/metadata/: errors.rs  mod.rs
zephyrs-core/src/sorting/: errors.rs  mod.rs
zephyrs-core/tests/: events_integration_test.rs
zephyrs-manager/: Cargo.toml
zephyrs-manager/src/: errors.rs  main.rs
zephyrs-manager/src/config/: errors.rs  mod.rs
zephyrs-server/: Cargo.toml
zephyrs-server/src/: main.rs
