[package]
name = "core"
version = "0.1.0"
authors = ["Nic Patterson <nic@reynn.dev>"]
edition = "2018"

[dependencies]
error-chain = { version = "~0.12" }
warp = { version = "~0.2" }
futures = { version = "~0.3" }
reqwest = { version = "~0.10", features = ["json"] }
tokio = { version = "~0.2", features = ["full"] }
log = { version = "~0.4" }

[dev-dependencies]
test-case = { version = "~1.0" }
